@@ -95,6 +95,7 @@ SUCH DAMAGE.
     <li><a href="guestoses.html#openbsdcatsinstall">OpenBSD/cats</a>
     <li><a href="guestoses.html#openbsdlandiskinstall">OpenBSD/landisk</a>
     <li><a href="guestoses.html#openbsdmvme88kinstall">OpenBSD/mvme88k</a>
+    <li><a href="guestoses.html#openbsdsgiinstall">OpenBSD/sgi</a>
     <li><a href="guestoses.html#helenos">HelenOS</a>
     <li><a href="guestoses.html#ultrixinstall">Ultrix/RISC</a>   
     <li><a href="guestoses.html#sprite">Sprite for DECstation</a>   
