@@ -398,7 +398,8 @@ machine in these lists is:
     <li><b>Malta</b> (<a href="guestoses.html#netbsdevbmipsinstall">NetBSD/evbmips</a>, <a href="unsupported.html#linux_malta2">Linux/Malta</a> <font color="#0000e0">(<super>*1</super>)</font>)
     <li><b>Algorithmics P5064</b> (<a href="guestoses.html#netbsdalgorinstall">NetBSD/algor</a>)
     <li><b>SGI O2 (aka IP32)</b> <font color="#0000e0">(<super>*2</super>)</font>
-	(<a href="guestoses.html#netbsdsgimips">NetBSD/sgi</a>)
+	(<a href="guestoses.html#netbsdsgimips">NetBSD/sgimips</a>,
+	<a href="guestoses.html#openbsdsgiinstall">OpenBSD/sgi</a>)
     <li><b>oldtestmips</b> (<a href="experiments.html#expdevices">experimental</a>, <a href="guestoses.html#helenos">HelenOS/mips</a>)
   </ul>
   <p>
