@@ -50,7 +50,6 @@ SUCH DAMAGE.
   <li><a href="#helenosppc">HelenOS/ppc 0.7.1</a>
   <li><a href="#mach">Mach/PMAX</a>
   <li><a href="#declinuxredhat">Redhat Linux for DECstation</a>
-  <li><a href="#openbsdsgiinstall">OpenBSD/sgi</a>
   <li><a href="#openbsdarcinstall">OpenBSD/arc 2.3</a>
   <li><a href="#openbsdluna88k">OpenBSD/luna88k</a>
   <li><a href="#debiancats">Debian GNU/Linux for CATS</a>
@@ -290,181 +289,6 @@ fdisk
 </pre>
 If you need to boot into single user mode, change options to
 <tt><b>-o "root=/dev/sda1 rw init=/bin/sh"</b></tt>.
-
-
-
-
-
-
-
-
-
-
-<p><br>
-<a name="openbsdsgiinstall"></a>
-<h3>OpenBSD/sgi:</h3>
-
-<a href="http://www.openbsd.org/sgi.html">OpenBSD/sgi</a>
-can almost run in GXemul on an emulated O2 (SGI-IP32) with root on NFS.
-It is possible to barely boot up the system and log in, but many
-operations (such as trying to compile GXemul within the emulated
-OpenBSD OS) trigger bugs in the emulator, so it is <font color="#ff0000"><i>not considered
-stable yet</i></font>.
-
-<p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="20050617-openbsd-sgi.png"><img src="20050617-openbsd-sgi_small.png"></a>
-&nbsp;&nbsp;
-<a href="20181018-openbsd-sgi-o2.png"><img src="20181018-openbsd-sgi-o2-small.png"></a>
-
-<p>GXemul does not yet emulate the AHC PCI SCSI controller in the O2,
-so it needs to boot via the emulated network.
-Another emulated machine must then be used as the nfs root server, and the emulated O2 machine must boot 
-as a <a href="http://www.openbsd.org/cgi-bin/man.cgi?query=diskless&amp;manpath=OpenBSD+Current&amp;format=html">diskless</a>
-client. Performing this setup is quite time consuming, but necessary:
-
-<p>
-<ol>
-  <li>First of all, the "<tt>nfs server</tt>" machine must be set up.
-	This needs to have a 1500 MB <tt>/tftpboot</tt> partition.
-	<a href="#netbsdpmaxinstall">Install NetBSD/pmax 8.0 from CDROM</a>.
-	(Don't forget to add the extra partition!)
-  <p>
-  <li>Configure the nfs server machine to act as an nfs server.
-	Start up the emulated DECstation:<pre>
-	<b>gxemul -e 3max -d nbsd_pmax.img</b>
-</pre>and enter the following commands as <tt>root</tt>
-	inside the emulator:
-<table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>
-<b>echo hostname=server &gt;&gt; /etc/rc.conf
-echo ifconfig_le0=\"inet 10.0.0.2\" &gt;&gt; /etc/rc.conf
-echo nameserver 10.0.0.254 &gt;&gt; /etc/resolv.conf
-echo 10.0.0.254 &gt; /etc/mygate
-echo /tftpboot -maproot=root 10.0.0.1 &gt; /etc/exports
-echo rpcbind=YES &gt;&gt; /etc/rc.conf
-echo nfs_server=YES &gt;&gt; /etc/rc.conf
-echo mountd=YES &gt;&gt; /etc/rc.conf
-echo bootparamd=YES &gt;&gt; /etc/rc.conf
-printf "client root=10.0.0.2:/tftpboot \\\n swap=10.0.0.2:/tftpboot/swap\n" &gt; /etc/bootparams
-echo "10:20:30:00:00:10 client" &gt; /etc/ethers
-echo 10.0.0.1 client &gt; /etc/hosts
-reboot</b>
-</pre></td></tr></table>
-  <li>On the host, download the OpenBSD distribution:
-<p><table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/base63.tgz
-wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/comp63.tgz
-wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xbase63.tgz
-wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xfont63.tgz
-wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xserv63.tgz
-wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xshare63.tgz
-gunzip base63.tgz
-gunzip comp63.tgz
-gunzip xbase63.tgz
-gunzip xfont63.tgz
-gunzip xserv63.tgz
-gunzip xshare63.tgz
-dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> base63.tar
-dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> comp63.tar
-dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xbase63.tar
-dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xfont63.tar
-dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xserv63.tar
-dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xshare63.tar
-</pre></td></tr></table>
-  <li>Start the DECstation emulation again using this command line:
-<p><table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>gxemul -xe 3max -d nbsd_pmax.img -d base63.tar -d comp63.tar -d xbase63.tar -d xfont63.tar -d xserv63.tar -d xshare63.tar
-</pre></td></tr></table>
-and enter the following commands to extract the OpenBSD distribution:
-<table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>
-<b>cd /tftpboot
-tar xf /dev/sd1c
-tar xf /dev/sd2c
-tar xf /dev/sd3c
-tar xf /dev/sd4c
-tar xf /dev/sd5c
-tar xf /dev/sd6c
-
-tar zxfv var/sysmerge/etc.tgz
-tar zxfv var/sysmerge/xetc.tgz
-
-dd if=/dev/zero of=swap bs=1024 count=131072
-
-echo inet 10.0.0.1 > /tftpboot/etc/hostname.mec0
-echo nameserver 10.0.0.254 > /tftpboot/etc/resolv.conf
-echo 10.0.0.2:/tftpboot / nfs rw 0 0 > /tftpboot/etc/fstab
-echo 10.0.0.2:/tftpboot/swap none swap sw,nfsmntpt=/swap >> /tftpboot/etc/fstab
-
-halt</b>
-</pre></td></tr></table>
-  <li>Download the OpenBSD/sgi GENERIC and RAMDISK kernels:<pre>
-	<a href="http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.IP32">http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.IP32</a>
-	<a href="http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.rd.IP32">http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.rd.IP32</a>
-
-</pre>
-  <li>Create a configuration file called <tt>config_client</tt>:
-<table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>
-<font color="#2020cf">!  Configuration file for running OpenBSD/sgi diskless with
-!  a NetBSD/pmax machine as the nfs server.
-!
-!  This config file is for the client.</font>
-
-<b>net(
-	add_remote("localhost:12444")   </b>! the server<b>
-	local_port(12445)               </b>! the client<b>
-)
-
-machine(
-	name("client machine")
-	serial_nr(1)
-
-        type("sgi")
-        subtype("o2")
-	use_x11(1)
-	memory(256)
-
-        </b>! load("bsd.rd.IP32")<b>
-        load("bsd.IP32")
-)
-</b>
-</pre></td></tr></table>
-	... and another configuration file for the server,
-	<tt>config_server</tt>:
-<table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>
-<b>net(
-	local_port(12444)               </b>! the server<b>
-	add_remote("localhost:12445")   </b>! the client<b>
-)
-
-machine(
-	name("nfs server")
-	serial_nr(2)
-
-        type("dec")
-        subtype("5000/200")
-
-        disk("nbsd_pmax.img")
-)
-</b>
-</pre></td></tr></table>
-  <li>Boot the "<tt>nfs server</tt>" and the OpenBSD/sgi
-	"<tt>client machine</tt>" as two separate emulator instances:<pre>
-	in one xterm:
-	<b>gxemul @config_server</b>
-
-	and then, in another xterm:
-	<b>gxemul @config_client</b>
-
-</pre>
-  <li>Optionally:
-	You might want to log in as <tt>root</tt> on the server machine, and
-	run <tt>tcpdump -lnvv</tt> or similar, to see that what the client
-	machine actually does on the network. The <tt>MAKEDEV</tt> script
-	takes almost forever, so be patient.
-</ol>
-
-
-<p><font color="#ff0000">Note that while this may appear to work,
-the OS is quite unstable, and many things such as compiling GXemul
-inside the emulated OS will trigger bugs.</font>
 
 
 
